ipc/ipdl/test/ipdl/error/mutualRecStructUnion.ipdl
struct X {
    int i;
    Y[] y;
};

union Y {
    X;
    Z;
};

struct Z {
    double d;
    X x;
};

protocol mutualRecStructUnion {
child:
    Test(X x, Y y, Z z);
    __delete__();
};
